--- a/latex/basics.tex
+++ b/latex/basics.tex
@@ -59,23 +59,38 @@ am Ende gar nicht nötig
 \section{PCA} % a priori algorithmus?
 \label{PCA}
 
- \todo{PCA-Algorithmus mit Pseudocode und Ein- und Ausgabe als Referenz (Eingabe ist Kovarianzmatrix, Rest Vorberechnung?)}
+ \todo{Pseudocode?}
  
  % Ziel
- \emph{Principal Component Analysis} (PCA) oder auch Hauptkomponentenanalyse \cite{PCA} wird meist mit dem Ziel angewendet die Dimensionalität einer Menge von Datenpunkten zu verringern, dabei aber möglichst wenig Information zu verwerfen.
- So wie beispielsweise in \cite{PCA_faces} bei 3D-Modellen von Gesichtern oder in \cite{PCA_bodies} bei 3D-Modellen von menschlichen Körpern. Auch im Zusammenhang mit prozeduraler Generierung wird PCA öfter verwendet, \zb zur Generierung von humanoiden Charakteren \cite{ProceduralCharacterGeneration} oder Texturen für Gesichter \cite{GeneratingFacialTextures}. \\
- Die Eingabe für eine PCA ist also eine Menge von Datenpunkten (oder Beispielen) mit jeweils $n$ Dimensionen. Voraussetzung ist, dass die Punkte in jeder Dimension normal-/gaußverteilt sind. Dann liegen die Punkte im $n$-dimensionalen Raum in einem Ellipsoid.
+ \emph{Principal Component Analysis} (PCA) oder auch Hauptkomponentenanalyse \cite{PCA} wird meist mit dem Ziel angewendet die Dimensionalität einer Menge von Datenpunkten zu verringern, dabei aber möglichst wenig Information zu verlieren.
+ So wie beispielsweise in \cite{PCA_faces} bei 3D-Modellen von Gesichtern oder in \cite{PCA_bodies} bei 3D-Modellen von menschlichen Körpern. Auch im Zusammenhang mit prozeduraler Generierung wird PCA oft verwendet, \zb zur Generierung von humanoiden Charakteren für Videospiele \cite{ProceduralCharacterGeneration} oder Texturen für Gesichter \cite{GeneratingFacialTextures}.
  
- Eine PCA wird durchgeführt um herauszufinden wo die Achsen des Ellipsoids liegen, denn jede Achse beschreibt eine Raumrichtung, die unabhängig von allen anderen ist.
- Transformiert man dann die Datenpunkte vom Eingabekoordinatensystem in dasjenige Koordinatensystem, das von den Achsen des Ellipsoids beschrieben wird, sind die einzelnen Dimensionen der Datenpunkte danach unabhängig voneinander.
+ Als Ausgangspunkt für eine PCA dient eine Menge von Datenpunkten (oder Beispielen) mit jeweils $n$ Dimensionen. Voraussetzung ist, dass die Punkte in jeder Dimension normal-/gaußverteilt sind. Dann liegen die Punkte im $n$-dimensionalen Raum in einem Ellipsoid.
  
- Interessant sind dabei die Achsen in deren Richtung die Daten die größe Streuung aufweisen, die "`principal components"'. Oft ist das Ziel die Dimensionalität der Eingabedaten zu reduzieren. Das wird dadurch erreicht, dass die Eingabedaten nur noch durch die "`principal components"' dargestellt werden und die anderen Dimensionen weggelassen werden. Das funktioniert natürlich besser, je weniger Streuung die Datenpunkte auf denjenigen Achsen aufweisen, die weggelassen werden.
+ Nun ist das Ziel herauszufinden wo die Achsen des Ellipsoids liegen. Entlang der Richtungen der Achsen sind die Beispiele widerum normalverteilt und die Verteilungen sind jeweils unabhängig voneinander.
+ Jetzt können die Datenpunkte vom Eingabekoordinatensystem in dasjenige Koordinatensystem transformiert werden, das von den Achsen des Ellipsoids aufgespannt wird. Interessant sind dabei die Achsen in deren Richtung die Daten die größe Streuung aufweisen, die "`principal components"'. 
+ 
+ Oft ist das Ziel die Dimensionalität der Eingabedaten zu reduzieren. Das wird dadurch erreicht, dass die Eingabedaten nur noch durch die "`principal components"' dargestellt werden und die anderen Dimensionen weggelassen werden. Je weniger Streuung die Datenpunkte auf denjenigen Achsen aufweisen, die weggelassen werden, desto weniger Information wird verworfen.
+ 
+ Will man stattdessen einen zufälligen Datenpunkt erzeugen, der die gleichen Verteilungen aufweist, wie die Eingabebeispiele, so funktioniert das im transformierten Koordinatensystem ebefalls sehr gut. Da die einzelnen Dimensionen unabhängig voneinander sind, kann man einfach für jede Dimension eine normalverteilte Zufallszahl mit der entsprechenden Varianz ziehen.
  
  Der Mittelpunkt des Ellipsoids ist der Mittelwert der Daten.
  Um die Achsen des Ellipsoids zu berechnen, wird zunächst eine Kovarianzmatrix aufgestellt. Ihre Einträge sind die Kovarianzen aller möglichen Kombinationen der Eingabedimensionen. Von dieser Matrix werden dann alle Eigenvektoren mit zugehörigen Eigenwerten berechnet.
  Die Eigenvektoren sind die Achsen des Ellipsoids und die Eigenwerte geben an wie groß die Varianz entlang dieser Achse ist.
  
- Will man nun herausfinden was die Haupteigenschaften oder "`principal components"' eines Datenpunktes sind, stellt man ihn im Koordinatensystem des Ellipsoids dar, also als gewichtete Summe der Eigenvektoren. Dann betrachtet man die Dimensionen mit den größten Eigenwerten. Dazu zieht man zunächst den Mittelwert vom Datenpunkt ab und multipliziert ihn mit der transponierten Basiswechselmatrix. Das ist diejenige Matrix, in deren Zeilen die Eigenvektoren der Kovarianzmatrix stehen.
+ Um nun die Haupteigenschaften oder "`principal components"' eines Datenpunktes zu finden, stellt man ihn im Koordinatensystem des Ellipsoids dar, also als gewichtete Summe der Eigenvektoren. Dann betrachtet man die Dimensionen mit den größten Eigenwerten. Dazu zieht man zunächst den Mittelwert vom Datenpunkt ab und multipliziert ihn mit der transponierten Basiswechselmatrix. Das ist diejenige Matrix, in deren Zeilen die Eigenvektoren der Kovarianzmatrix stehen.
+
+ 
+%---------------------------------- 
+\section{Quantil-Quantil-Diagramme} 
+\label{qqdiagrams}
+
+ \begin{itemize}
+  \item QQ Diagramme erklären
+  \item negative Werte sind ganz normal, da inverse CDF bei einem Mittelwert von 0 bei Werten < 0.5 negativ ist
+  \item welche Methode um Unterscheidungsanteil auszurechnen? \url{https://de.wikipedia.org/wiki/Quantil-Quantil-Diagramm} (verschiedene Sachen ausprobieren, zeigen dass egal?
+  \item noch genauer: "`Zahl"' ausrechnen (paper)? (oder als Alternative vorschlagen)
+ \end{itemize}
 
 
 %-------------------------------
