--- a/latex/thesisclass.cls
+++ b/latex/thesisclass.cls
@@ -177,6 +177,8 @@
 }
 %% --- End of captions style ---
 
+\usepackage[format=plain, indention=1cm]{caption}
+
 
 
 %% ---------------------------------
